# 2023-fall-yatcpu-repo

./: .gitignore  LICENSE  README.md  start_cpu.bat
.devcontainer/: Dockerfile  devcontainer.json
docs/: board.md  env_doc.md  mkdocs.yml  requirements.txt
docs/docs/: TODO.md  acknowledgement.md  board.md  connect_ddr_mem_try.md  env.md  index.md  references.md  run_os_try.md  test.md
docs/docs/better-tut/: intro.md
docs/docs/better-tut/cheatsheets/: ide-tips.md  riscv-isa.md
docs/docs/better-tut/getting-started/: docker.md  index.md  (+3 more)
lab1/csrc/: CMakeLists.txt
lab1/verilog/verilator/: sim_main.cpp
lab1/verilog/z710/: clock_control.v
lab1/verilog/z710v1.3/: clock_control.v  top_test.v
lab1/vivado/z710/: README.md  generate_bitstream.tcl  vitis_prj_run.tcl  z710.xdc
lab1/vivado/z710v1.3/: generate_bitstream.tcl  rv-z710v1.3-20.tcl  z710v1.3.xdc
lab2/csrc/: CMakeLists.txt  say_goodbye.c
lab2/verilog/verilator/: sim_main.cpp
lab2/vivado/z710/: README.md  riscv-z710-v2020.tcl  vitis_prj_run.tcl
lab2/vivado/z710v1.3/: generate_bitstream.tcl  program_device.tcl  rv-z710v1.3-20.tcl
lab3/: Makefile
lab3/csrc/: CMakeLists.txt  hazard.S  say_goodbye.c
lab3/verilog/verilator/: sim_main.cpp
lab3/verilog/z710/: clock_control.v
lab3/verilog/z710v1.3/: clock_control.v
lab3/vivado/z710/: README.md  generate_bitstream.tcl
lab3/vivado/z710v1.3/: README.md
lab4/: .gitignore
lab4/csrc/: CMakeLists.txt  build.cl.bat  build.cl.sh  build.gnu.bat  build.gnu.sh  fibonacci.c  say_goodbye.c  toolchain.cl.cmake  toolchain.riscv-gnu.cmake
lab4/verilog/verilator/: sim_main.cpp
lab4/verilog/z710/: Top.anno.json  Top.fir  Top.v  clock_control.v
lab4/vivado/z710/: README.md  generate_bitstream.tcl  open_project.tcl  riscv-z710-v2020.tcl  riscv-z710.tcl
mini-yatcpu/verilog/: say_goodbye.asmbin.txt
mini-yatcpu/verilog/z710/: Top.anno.json  Top.fir  Top.v
mini-yatcpu/vivado/z710/: open_project.tcl  riscv-z710.tcl
misc/: autoans.py  example_codes.yaml
(+100 files in other folders)
